[package]
name = "ovpnfile"
description = "A crate for parsing openvpn config files"
repository = "https://github.com/alexjg/rs-ovpnfile"
license = "MIT/Apache-2.0"
version = "0.1.0"
authors = ["Alex Good"]

[dependencies]
error-chain = "0.10"
regex = "0.2"
lazy_static = "0.2"

[dev-dependencies]
spectral = "0.6"

